--- a/templates/IOT.html
+++ b/templates/IOT.html
@@ -15,9 +15,9 @@
     <picture id="btnWhatsapp">
         <a href="https://maper.info/29j736" target="_blank">
             <video muted autoplay loop>
-                <source src="FALE-CONOSCO-DESKTOP.mp4" media="(min-width: 501px)"
+                <source src="/static/FALE-CONOSCO-DESKTOP.mp4" media="(min-width: 501px)"
                     style="video::internal-media-controls{display: none;}">
-                <source src="FALE-CONOSCO-MOBILE.mp4" media="(max-width: 500px)"
+                <source src="/static/FALE-CONOSCO-MOBILE.mp4" media="(max-width: 500px)"
                     style="video::internal-media-controls{display: none;}">
             </video>
         </a>
@@ -48,4 +48,44 @@
             </ul>
         </nav>
     </header>
+    <section class="finalizar">
+        <h1>PROGRAMANDO EM JAVA SCRIPT</h1>
+        <video src="../static/IOT - INTERNET DAS COISAS.mp4" loop muted autoplay></video>
+        <h1>Valor da inscrição</h1>
+        <p style="text-align: end;">R$ 19,90/mês</p>
+        <label for="">
+            Atenção, é de extrema importancia enviar o comprovante para equipe de suporte para finalizar a compra.
+        </label>
+        <h2>Habilidades Essenciais para Programar em IoT</h2>
+        <li>A Internet das Coisas (IoT) conecta dispositivos físicos à internet, permitindo a coleta e troca de dados em
+            tempo real. Programar para a IoT exige um conjunto de habilidades específicas:</li>
+        <h3>1. Hardware e Eletrônica</h3>
+        <li>Componentes básicos: Microcontroladores, sensores, atuadores, LEDs etc.</li>
+        <li>Protocolos de comunicação: Wi-Fi, Bluetooth, Zigbee, LoRaWAN etc.</li>
+        <li>Protoboard e plataformas de desenvolvimento: Arduino, ESP8266, Raspberry Pi etc.</li>
+        <li>Eletrônica básica: Conceitos de voltagem, corrente, resistência e circuitos.</li>
+        <h3>2. Programação</h3>
+        <li>Linguagens de programação: C/C++, Python, JavaScript etc.</li>
+        <li>Ferramentas de desenvolvimento: IDEs (Arduino IDE, Visual Studio Code etc.), SDKs, frameworks.</li>
+        <li>Programação embarcada: Desenvolvimento de software para microcontroladores.</li>
+        <li>Conceitos de IoT: Arquitetura de sistemas IoT, segurança, nuvem, protocolos de comunicação.</li>
+
+        <h3>3. Redes e Conectividade</h3>
+        <li>Redes TCP/IP: Funcionamento de redes, endereços IP, protocolos de transporte.</li>
+        <li>Wi-Fi, Bluetooth, Zigbee, LoRaWAN: Características, vantagens e desvantagens de cada protocolo.</li>
+        <li>Segurança de rede: Criptografia, autenticação e autorização para dispositivos IoT.</li>
+        <h3>4. Nuvem e Bancos de Dados</h3>
+        <li>Plataformas de nuvem: AWS, Azure, Google Cloud etc.</li>
+        <li>Armazenamento de dados: NoSQL, SQL, bancos de dados em tempo real.</li>
+        <li>Análise de dados: Ferramentas e técnicas para análise de dados coletados por dispositivos IoT.</li>
+        <h3>5. Soft Skills</h3>
+        <li>Resolução de problemas: Habilidade para identificar e solucionar problemas de hardware e software.</li>
+        <li>Criatividade e inovação: Capacidade de pensar fora da caixa e desenvolver soluções inovadoras para problemas
+            reais.</li>
+        <li>Aprendizagem contínua: A área de IoT está em constante evolução, por isso é importante se manter atualizado
+            com as novas tecnologias e tendências.</li>
+        </ul>
+        <li>Com as habilidades e recursos certos, você estará pronto para começar a programar para a IoT e criar
+            soluções inovadoras para o mundo.</li>
+    </section>
 </body>
