--- a/templates/javascript.html
+++ b/templates/javascript.html
@@ -49,26 +49,29 @@
         </nav>
     </header>
     <section class="finalizar">
-            <h1>PROGRAMANDO EM JAVA SCRIPT</h1>
-<img src="../static/PROGRAMANDO EM JAVA SCRIPT 00.png" alt="">        
-    <h1>Valor do certifidado</h1>
-    <p>19,90</p>
-    <label for="">
-        Atenção, é de extrema importancia enviar o comprovante para equipe de suporte para finalizar a compra.
-    </label>
-    <h1>JavaScript</h1>
-    <p>Linguagem de programação que permite adicionar interatividade ao site, como animações, menus suspensos, validação de formulários e jogos.</p>
-      <h2>Habilidades para desenvolver sites em mobile e PC</h2>
-    
-      <section>
-        <h3>Linguagem de programação</h3>
-        <p><strong>JavaScript:</strong> Permite adicionar interatividade ao site, como animações, menus suspensos, validação de formulários e jogos.</p>
-      </section>
-    
-      <section>
-        <h3>Frameworks e bibliotecas</h3>
-        <p>Ferramentas que facilitam o desenvolvimento, fornecendo código pré-escrito para funcionalidades comuns, como sliders, galerias de imagens e carrosséis.</p>
-      </section>
-     
-</section> 
+        <h1>PROGRAMANDO EM JAVA SCRIPT</h1>
+        <img src="../static/PROGRAMANDO EM JAVA SCRIPT 00.png" alt="">
+        <h1>Valor da inscrição</h1>
+        <p style="text-align: end;">R$ 19,90/mês</p>
+        <label for="">
+            Atenção, é de extrema importancia enviar o comprovante para equipe de suporte para finalizar a compra.
+        </label>
+        <h1>JavaScript</h1>
+        <p>Linguagem de programação que permite adicionar interatividade ao site, como animações, menus suspensos,
+            validação de formulários e jogos.</p>
+        <h2>Habilidades para desenvolver sites em mobile e PC</h2>
+
+        <section>
+            <h3>Linguagem de programação</h3>
+            <p><strong>JavaScript:</strong> Permite adicionar interatividade ao site, como animações, menus suspensos,
+                validação de formulários e jogos.</p>
+        </section>
+
+        <section>
+            <h3>Frameworks e bibliotecas</h3>
+            <p>Ferramentas que facilitam o desenvolvimento, fornecendo código pré-escrito para funcionalidades comuns,
+                como sliders, galerias de imagens e carrosséis.</p>
+        </section>
+
+    </section>
 </body>
