--- a/templates/python.html
+++ b/templates/python.html
@@ -48,4 +48,40 @@
             </ul>
         </nav>
     </header>
+    <section class="finalizar">
+        <h1>PROGRAMANDO EM PYTHON</h1>
+        <img src="../static/PROGRAMANDO EM PYTHON 00.png" alt="">
+        <h1>Valor da inscrição</h1>
+        <p style="text-align: end;">R$ 19,90/mês</p>
+        <label for="">
+            Atenção, é de extrema importancia enviar o comprovante para equipe de suporte para finalizar a compra.
+        </label>
+        <h2>Habilidades básicas para desenvolver sites em mobile e PC</h2>
+        <p>Para desenvolver sites em mobile e PC, você precisa dominar algumas habilidades básicas, como:</p>
+        <h2>Habilidades Básicas para Começar a Programar em Python</h2>
+        <p>Para começar a programar em Python, você precisa dominar algumas habilidades básicas:</p>
+        <h3>Conceitos básicos de programação</h3>
+        <li>Variáveis: Armazenam dados na memória do computador.</li>
+        <li>Tipos de dados: Números inteiros, decimais, strings, booleanos etc.</li>
+        <li>Operadores: Operações matemáticas e lógicas.</li>
+        <li>Estruturas de controle: Condicionais (if, else), loops (for, while).</li>
+        <li>Funções: Blocos de código reutilizáveis.</li>
+        <h3>Sintaxe de Python</h3>
+        <li>Indentação para organizar o código.</li>
+        <li>Palavras-chave como if, for, def etc.</li>
+        <li>Pontuação como parênteses, colchetes e chaves.</li>
+        <h3>Orientação a objetos</h3>
+        <li>Classes e objetos.</li>
+        <li>Atributos e métodos.</li>
+        <li>Herança e polimorfismo.</li>
+        <h3>Ferramentas e bibliotecas</h3>
+        <li>Interpretador Python.</li>
+        <li>IDEs como PyCharm e VS Code.</li>
+        <li>Bibliotecas padrão como os, math, re.</li>
+        <h3>Depuração</h3>
+        <li>Encontrar e corrigir erros no código.</li>
+        <li>Ferramentas de depuração como pdb.</li>
+        <p>Com essas habilidades básicas, você estará pronto para começar a programar em Python e criar seus
+            próprios programas.</p>
+    </section>
 </body>
