--- a/templates/cursos.html
+++ b/templates/cursos.html
@@ -51,19 +51,19 @@
     <ul id="cursos">
         <label for="">
             <li>IOT - INTERNET DAS COISAS</li>
-            <a href="IOT.html"><video src="../static/IOT - INTERNET DAS COISAS.mp4" loop muted autoplay></video></a>
+            <a href="IOT.html" target="_blank"><video src="../static/IOT - INTERNET DAS COISAS.mp4" loop muted autoplay></video></a>
         </label>
         <label for="">
             <li>MARCAÇÕES HTML E CSS</li>
-            <a href="marcações.html"><video src="../static/MARCAÇÕES HTML E CSS.mp4" loop muted autoplay></video></a>
+            <a href="marcações.html" target="_blank"><video src="../static/MARCAÇÕES HTML E CSS.mp4" loop muted autoplay></video></a>
         </label>
         <label for="">
             <li>PROGRAMANDO EM PYTHON</li>
-            <a href="python.html"><video src="../static/PROGRAMANDO EM PYTHON.mp4" loop muted autoplay></video></a>
+            <a href="python.html" target="_blank"><video src="../static/PROGRAMANDO EM PYTHON.mp4" loop muted autoplay></video></a>
         </label>
         <label for="">
             <li>PROGRAMANDO EM JAVA SCRIPT</li>
-            <a href="javascript.html"><video src="../static/PROGRAMANDO EM JAVA SCRIPT.mp4" loop muted autoplay></video></a>
+            <a href="javascript.html" target="_blank"><video src="../static/PROGRAMANDO EM JAVA SCRIPT.mp4" loop muted autoplay></video></a>
         </label>
     </ul>
 </body>
