--- a/templates/marcações.html
+++ b/templates/marcações.html
@@ -48,4 +48,59 @@
             </ul>
         </nav>
     </header>
+    <section class="finalizar">
+        <h1>MARCAÇÕES HTML E CSS</h1>
+        <img src="../static/MARCAÇÕES HTML E CSS 00.png" alt="">
+        <h1>Valor da inscrição</h1>
+        <p style="text-align: end;">R$ 19,90/mês</p>
+        <label for="">
+            Atenção, é de extrema importancia enviar o comprovante para equipe de suporte para finalizar a compra.
+        </label>
+        <h2>Habilidades básicas para desenvolver sites em mobile e PC</h2>
+        <p>Para desenvolver sites em mobile e PC, você precisa dominar algumas habilidades básicas, como:</p>
+        <section>
+            <h3>HTML e CSS</h3>
+            <ul>
+                <li><strong>HTML:</strong> É a estrutura básica do site, responsável por organizar o conteúdo em
+                    diferentes elementos, como títulos, parágrafos, imagens e vídeos.</li>
+                <li><strong>CSS:</strong> Define a aparência do site, controlando cores, fontes, tamanhos, layout e
+                    posicionamento dos elementos.</li>
+            </ul>
+        </section>
+        <h2>Outras habilidades importantes para desenvolver sites</h2>
+
+  <section>
+    <h3>Responsive design</h3>
+    <p>
+      Abordagem que garante que o site seja bem visualizado em diferentes dispositivos, como smartphones, tablets e desktops.
+    </p>
+  </section>
+
+  <section>
+    <h3>Princípios de UX/UI</h3>
+    <ul>
+      <li>
+        **UX (User Experience):** Experiência do usuário ao navegar no site, focando na usabilidade, facilidade de navegação e interação.
+      </li>
+      <li>
+        **UI (User Interface):** Interface visual do site, abrangendo design, layout, cores e tipografia.
+      </li>
+    </ul>
+  </section>
+
+  <section>
+    <h3>Outras habilidades importantes</h3>
+    <ul>
+      <li>
+        **Acessibilidade:** Garantir que o site seja acessível a todos os usuários, incluindo pessoas com deficiência.
+      </li>
+      <li>
+        **SEO (Search Engine Optimization):** Otimizar o site para que seja facilmente encontrado nos mecanismos de busca.
+      </li>
+      <li>
+        **Segurança:** Proteger o site contra ataques e malwares.
+      </li>
+    </ul>
+  </section>
+    </section>
 </body>
