--- a/templates/javascript.html
+++ b/templates/javascript.html
@@ -12,16 +12,16 @@
 </head>
 
 <body>
-    <picture id="btnWhatsapp">
-        <a href="https://maper.info/29j736" target="_blank">
+    <a href="https://maper.info/2vNhu6asdas" target="_blank">
+        <picture id="btnWhatsapp">
             <video muted autoplay loop>
                 <source src="/static/FALE-CONOSCO-DESKTOP.mp4" media="(min-width: 501px)"
                     style="video::internal-media-controls{display: none;}">
                 <source src="/static/FALE-CONOSCO-MOBILE.mp4" media="(max-width: 500px)"
                     style="video::internal-media-controls{display: none;}">
             </video>
-        </a>
-    </picture>
+        </picture>
+    </a>
     <header>
         <nav>
             <ul>
@@ -47,10 +47,12 @@
                 </li>
             </ul>
         </nav>
+        <a href="cursos.html"><button style="float: right;">voltar</button>
+        </a>
     </header>
     <section class="finalizar">
         <h1>PROGRAMANDO EM JAVA SCRIPT</h1>
-        <img src="../static/PROGRAMANDO EM JAVA SCRIPT 00.png" alt="">
+<video src="../static/PROGRAMANDO EM JAVA SCRIPT.mp4" loop muted autoplay></video>
         <h1>Valor da inscrição</h1>
         <p style="text-align: end;">R$ 19,90/mês</p>
         <label for="">
