--- a/templates/IOT.html
+++ b/templates/IOT.html
@@ -12,16 +12,16 @@
 </head>
 
 <body>
+    <a href="https://maper.info/2vNhu6asdas" target="_blank">
     <picture id="btnWhatsapp">
-        <a href="https://maper.info/29j736" target="_blank">
             <video muted autoplay loop>
                 <source src="/static/FALE-CONOSCO-DESKTOP.mp4" media="(min-width: 501px)"
                     style="video::internal-media-controls{display: none;}">
                 <source src="/static/FALE-CONOSCO-MOBILE.mp4" media="(max-width: 500px)"
                     style="video::internal-media-controls{display: none;}">
             </video>
-        </a>
     </picture>
+</a>
     <header>
         <nav>
             <ul>
@@ -47,9 +47,11 @@
                 </li>
             </ul>
         </nav>
+<a href="cursos.html"><button style="float: right;">voltar</button>
+</a>
     </header>
     <section class="finalizar">
-        <h1>PROGRAMANDO EM JAVA SCRIPT</h1>
+        <h1>IOT - INTERNET DAS COISAS</h1>
         <video src="../static/IOT - INTERNET DAS COISAS.mp4" loop muted autoplay></video>
         <h1>Valor da inscrição</h1>
         <p style="text-align: end;">R$ 19,90/mês</p>
@@ -69,7 +71,6 @@
         <li>Ferramentas de desenvolvimento: IDEs (Arduino IDE, Visual Studio Code etc.), SDKs, frameworks.</li>
         <li>Programação embarcada: Desenvolvimento de software para microcontroladores.</li>
         <li>Conceitos de IoT: Arquitetura de sistemas IoT, segurança, nuvem, protocolos de comunicação.</li>
-
         <h3>3. Redes e Conectividade</h3>
         <li>Redes TCP/IP: Funcionamento de redes, endereços IP, protocolos de transporte.</li>
         <li>Wi-Fi, Bluetooth, Zigbee, LoRaWAN: Características, vantagens e desvantagens de cada protocolo.</li>
