--- a/templates/python.html
+++ b/templates/python.html
@@ -12,16 +12,16 @@
 </head>
 
 <body>
+    <a href="https://maper.info/2vNhu6asdas" target="_blank">
     <picture id="btnWhatsapp">
-        <a href="https://maper.info/29j736" target="_blank">
             <video muted autoplay loop>
-                <source src="FALE-CONOSCO-DESKTOP.mp4" media="(min-width: 501px)"
+                <source src="/static/FALE-CONOSCO-DESKTOP.mp4" media="(min-width: 501px)"
                     style="video::internal-media-controls{display: none;}">
-                <source src="FALE-CONOSCO-MOBILE.mp4" media="(max-width: 500px)"
+                <source src="/static/FALE-CONOSCO-MOBILE.mp4" media="(max-width: 500px)"
                     style="video::internal-media-controls{display: none;}">
             </video>
-        </a>
     </picture>
+</a>
     <header>
         <nav>
             <ul>
@@ -47,11 +47,13 @@
                 </li>
             </ul>
         </nav>
+<a href="cursos.html"><button style="float: right;">voltar</button>
+</a>
     </header>
     <section class="finalizar">
         <h1>PROGRAMANDO EM PYTHON</h1>
-        <img src="../static/PROGRAMANDO EM PYTHON 00.png" alt="">
-        <h1>Valor da inscrição</h1>
+<video src="../static/PROGRAMANDO EM PYTHON.mp4" loop autoplay muted></video>  
+      <h1>Valor da inscrição</h1>
         <p style="text-align: end;">R$ 19,90/mês</p>
         <label for="">
             Atenção, é de extrema importancia enviar o comprovante para equipe de suporte para finalizar a compra.
@@ -60,28 +62,28 @@
         <p>Para desenvolver sites em mobile e PC, você precisa dominar algumas habilidades básicas, como:</p>
         <h2>Habilidades Básicas para Começar a Programar em Python</h2>
         <p>Para começar a programar em Python, você precisa dominar algumas habilidades básicas:</p>
-        <h3>Conceitos básicos de programação</h3>
+     <section>   <h3>Conceitos básicos de programação</h3>
         <li>Variáveis: Armazenam dados na memória do computador.</li>
         <li>Tipos de dados: Números inteiros, decimais, strings, booleanos etc.</li>
         <li>Operadores: Operações matemáticas e lógicas.</li>
         <li>Estruturas de controle: Condicionais (if, else), loops (for, while).</li>
-        <li>Funções: Blocos de código reutilizáveis.</li>
+        <li>Funções: Blocos de código reutilizáveis.</li></section>
         <h3>Sintaxe de Python</h3>
         <li>Indentação para organizar o código.</li>
         <li>Palavras-chave como if, for, def etc.</li>
         <li>Pontuação como parênteses, colchetes e chaves.</li>
-        <h3>Orientação a objetos</h3>
+      <section>  <h3>Orientação a objetos</h3>
         <li>Classes e objetos.</li>
         <li>Atributos e métodos.</li>
-        <li>Herança e polimorfismo.</li>
+        <li>Herança e polimorfismo.</li></section>
         <h3>Ferramentas e bibliotecas</h3>
         <li>Interpretador Python.</li>
         <li>IDEs como PyCharm e VS Code.</li>
         <li>Bibliotecas padrão como os, math, re.</li>
-        <h3>Depuração</h3>
+      <section>  <h3>Depuração</h3>
         <li>Encontrar e corrigir erros no código.</li>
         <li>Ferramentas de depuração como pdb.</li>
         <p>Com essas habilidades básicas, você estará pronto para começar a programar em Python e criar seus
-            próprios programas.</p>
+            próprios programas.</p></section>
     </section>
 </body>
