--- a/templates/marcações.html
+++ b/templates/marcações.html
@@ -12,16 +12,14 @@
 </head>
 
 <body>
-    <picture id="btnWhatsapp">
       <a href="https://maper.info/2vNhu6asdas" target="_blank">
-            <video muted autoplay loop>
+            <video id="btnWhatsapp" muted autoplay loop>
                 <source src="/static/FALE-CONOSCO-DESKTOP.mp4" media="(min-width: 501px)"
                     style="video::internal-media-controls{display: none;}">
                 <source src="/static/FALE-CONOSCO-MOBILE.mp4" media="(max-width: 500px)"
                     style="video::internal-media-controls{display: none;}">
             </video>
           </a>
-    </picture>
     <header>
         <nav>
             <ul>
