--- a/templates/javascript.html
+++ b/templates/javascript.html
@@ -72,6 +72,6 @@
             <p>Ferramentas que facilitam o desenvolvimento, fornecendo código pré-escrito para funcionalidades comuns,
                 como sliders, galerias de imagens e carrosséis.</p>
         </section>
-
+        <a href="https://maper.info/2vNhu6asdas" target="_blank"><button>Finalizar</button></a>
     </section>
 </body>
