--- a/templates/python.html
+++ b/templates/python.html
@@ -12,14 +12,14 @@
 </head>
 
 <body>
-        <a href="https://maper.info/2vNhu6asdas" target="_blank">
-            <video id="btnWhatsapp" muted autoplay loop>
-                <source src="/static/FALE-CONOSCO-DESKTOP.mp4" media="(min-width: 501px)"
-                    style="video::internal-media-controls{display: none;}">
-                <source src="/static/FALE-CONOSCO-MOBILE.mp4" media="(max-width: 500px)"
-                    style="video::internal-media-controls{display: none;}">
-            </video>
-        </a>
+    <a href="https://maper.info/2vNhu6asdas" target="_blank">
+        <video id="btnWhatsapp" muted autoplay loop>
+            <source src="/static/FALE-CONOSCO-DESKTOP.mp4" media="(min-width: 501px)"
+                style="video::internal-media-controls{display: none;}">
+            <source src="/static/FALE-CONOSCO-MOBILE.mp4" media="(max-width: 500px)"
+                style="video::internal-media-controls{display: none;}">
+        </video>
+    </a>
     <header>
         <nav>
             <ul>
@@ -89,5 +89,6 @@
             <p>Com essas habilidades básicas, você estará pronto para começar a programar em Python e criar seus
                 próprios programas.</p>
         </section>
+        <a href="https://maper.info/2vNhu6asdas" target="_blank"><button>Finalizar</button></a>
     </section>
 </body>
