--- a/templates/marcações.html
+++ b/templates/marcações.html
@@ -4,53 +4,53 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../static/style.css" />
-    <link rel="shortcut icon" href="logoPK.png" type="image/x-icon" />
-    <title>Portifolio</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../static/style.css" />
+  <link rel="shortcut icon" href="logoPK.png" type="image/x-icon" />
+  <title>Portifolio</title>
 </head>
 
 <body>
-      <a href="https://maper.info/2vNhu6asdas" target="_blank">
-            <video id="btnWhatsapp" muted autoplay loop>
-                <source src="/static/FALE-CONOSCO-DESKTOP.mp4" media="(min-width: 501px)"
-                    style="video::internal-media-controls{display: none;}">
-                <source src="/static/FALE-CONOSCO-MOBILE.mp4" media="(max-width: 500px)"
-                    style="video::internal-media-controls{display: none;}">
-            </video>
+  <a href="https://maper.info/2vNhu6asdas" target="_blank">
+    <video id="btnWhatsapp" muted autoplay loop>
+      <source src="/static/FALE-CONOSCO-DESKTOP.mp4" media="(min-width: 501px)"
+        style="video::internal-media-controls{display: none;}">
+      <source src="/static/FALE-CONOSCO-MOBILE.mp4" media="(max-width: 500px)"
+        style="video::internal-media-controls{display: none;}">
+    </video>
+  </a>
+  <header>
+    <nav>
+      <ul>
+        <li>
+          <a href="../index.html">
+            HOME
           </a>
-    <header>
-        <nav>
-            <ul>
-                <li>
-                    <a href="../index.html">
-                        HOME
-                    </a>
-                </li>
-                <li>
-                    <a href="../templates/cursos.html">
-                        CURSOS
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.instagram.com/ti.udia/" target="_blank">
-                        BLOG
-                    </a>
-                </li>
-                <li style="float: right;">
-                    <a href="../templates/formulario de inscrição.html">
-                        AFILIADOS
-                    </a>
-                </li>
-            </ul>
-        </nav>
-<a href="cursos.html"><button style="float: right;">voltar</button>
-</a>
-    </header>
+        </li>
+        <li>
+          <a href="../templates/cursos.html">
+            CURSOS
+          </a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/ti.udia/" target="_blank">
+            BLOG
+          </a>
+        </li>
+        <li style="float: right;">
+          <a href="../templates/formulario de inscrição.html">
+            AFILIADOS
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <a href="cursos.html"><button style="float: right;">voltar</button>
+    </a>
+  </header>
   <section class="finalizar">
     <h1>MARCAÇÕES HTML E CSS</h1>
-<video src="../static/MARCAÇÕES HTML E CSS.mp4" loop muted autoplay></video>
+    <video src="../static/MARCAÇÕES HTML E CSS.mp4" loop muted autoplay></video>
     <h1>Valor da inscrição</h1>
     <p style="text-align: end;">R$ 19,90/mês</p>
     <label for="">
@@ -89,5 +89,6 @@
     <li>
       **Segurança:** Proteger o site contra ataques e malwares.
     </li>
+    <a href="https://maper.info/2vNhu6asdas" target="_blank"><button>Finalizar</button></a>
   </section>
 </body>
