--- a/templates/formulario de inscrição.html
+++ b/templates/formulario de inscrição.html
@@ -14,20 +14,20 @@
 <body>
     <picture id="btnWhatsapp">
         <a href="https://maper.info/29j736" target="_blank">
-          <video muted autoplay loop>
-            <source src="FALE-CONOSCO-DESKTOP.mp4" media="(min-width: 501px)"
-              style="video::internal-media-controls{display: none;}">
-            <source src="FALE-CONOSCO-MOBILE.mp4" media="(max-width: 500px)"
-              style="video::internal-media-controls{display: none;}">
-          </video>
+            <video muted autoplay loop>
+                <source src="FALE-CONOSCO-DESKTOP.mp4" media="(min-width: 501px)"
+                    style="video::internal-media-controls{display: none;}">
+                <source src="FALE-CONOSCO-MOBILE.mp4" media="(max-width: 500px)"
+                    style="video::internal-media-controls{display: none;}">
+            </video>
         </a>
-      </picture>
+    </picture>
     <header>
         <nav>
             <ul>
                 <li>
                     <a href="../index.html">
-                        HOME
+                        <img src="../static/logoPK.png" style="max-width: 30%;" alt="">
                     </a>
                 </li>
                 <li>
