--- a/templates/python.html
+++ b/templates/python.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../static/style.css" />
-    <link rel="shortcut icon" href="logoPK.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="../static/logoPK.png" type="image/x-icon" />
     <title>Portifolio</title>
 </head>
 
@@ -25,11 +25,11 @@
             <ul>
                 <li>
                     <a href="../index.html">
-                        HOME
+                        <img src="../static/logoPK.png" style="max-width: 30%;" alt="">
                     </a>
                 </li>
                 <li>
-                    <a href="../templates/cursos.html">
+                    <a href="cursos.html">
                         CURSOS
                     </a>
                 </li>
@@ -39,14 +39,12 @@
                     </a>
                 </li>
                 <li style="float: right;">
-                    <a href="../templates/formulario de inscrição.html">
+                    <a href="formulario de inscrição.html">
                         AFILIADOS
                     </a>
                 </li>
             </ul>
         </nav>
-        <a href="cursos.html"><button style="float: right;">voltar</button>
-        </a>
     </header>
     <section class="finalizar">
         <h1>PROGRAMANDO EM PYTHON</h1>
