--- a/templates/cursos.html
+++ b/templates/cursos.html
@@ -7,21 +7,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../static/style.css" />
-    <link rel="shortcut icon" href="logoPK.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="../static/logoPK.png" type="image/x-icon" />
     <title>Portifolio</title>
 </head>
 
 <body>
-    <picture id="btnWhatsapp">
-        <a href="https://maper.info/29j736" target="_blank">
-            <video muted autoplay loop>
-                <source src="FALE-CONOSCO-DESKTOP.mp4" media="(min-width: 501px)"
-                    style="video::internal-media-controls{display: none;}">
-                <source src="FALE-CONOSCO-MOBILE.mp4" media="(max-width: 500px)"
-                    style="video::internal-media-controls{display: none;}">
-            </video>
-        </a>
-    </picture>
     <header>
         <nav>
             <ul>
