--- a/templates/marcações.html
+++ b/templates/marcações.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../static/style.css" />
-  <link rel="shortcut icon" href="logoPK.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="../static/logoPK.png" type="image/x-icon" />
   <title>Portifolio</title>
 </head>
 
@@ -22,32 +22,30 @@
   </a>
   <header>
     <nav>
-      <ul>
-        <li>
-          <a href="../index.html">
-            HOME
-          </a>
-        </li>
-        <li>
-          <a href="../templates/cursos.html">
-            CURSOS
-          </a>
-        </li>
-        <li>
-          <a href="https://www.instagram.com/ti.udia/" target="_blank">
-            BLOG
-          </a>
-        </li>
-        <li style="float: right;">
-          <a href="../templates/formulario de inscrição.html">
-            AFILIADOS
-          </a>
-        </li>
-      </ul>
+        <ul>
+            <li>
+                <a href="../index.html">
+                    <img src="../static/logoPK.png" style="max-width: 30%;" alt="">
+                </a>
+            </li>
+            <li>
+                <a href="cursos.html">
+                    CURSOS
+                </a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/ti.udia/" target="_blank">
+                    BLOG
+                </a>
+            </li>
+            <li style="float: right;">
+                <a href="formulario de inscrição.html">
+                    AFILIADOS
+                </a>
+            </li>
+        </ul>
     </nav>
-    <a href="cursos.html"><button style="float: right;">voltar</button>
-    </a>
-  </header>
+</header>
   <section class="finalizar">
     <h1>MARCAÇÕES HTML E CSS</h1>
     <video src="../static/MARCAÇÕES HTML E CSS.mp4" loop muted autoplay></video>
