--- a/static/style.css
+++ b/static/style.css
@@ -5,10 +5,6 @@
     font-size: x-large;
 }
 
-.interface {
-    padding: 15px;
-}
-
 header {
     position: relative;
     color: white;
@@ -27,12 +23,11 @@ button {
 }
 
 section {
-    margin: 25px;
     background-color: #230D73;
     box-shadow: #230D73 10px 10px 50px 10px;
     color: white;
-    border-radius: 15px;
-    padding: 15px;
+    border-radius: 5px;
+    margin-bottom: 50px;
 }
 
 section li {
@@ -182,9 +177,6 @@ video {
 section#apps ul{
     columns:4;
 }
-section#apps ul li{
-    padding: 15px;
-}
 
 video, img{
     border-radius: 15px;
@@ -213,7 +205,7 @@ ul#cursos li {
 
 .finalizar {
     max-width: 900px;
-    margin: 10vh auto 10vh auto;
+    margin: 10vh auto ;
     padding: 15px;
     background-color: white;
     color: #230D73;
