--- a/templates/cursos.html
+++ b/templates/cursos.html
@@ -14,47 +14,68 @@
 <body>
     <header>
         <nav>
-            <ul>
-                <li>
-                    <a href="../index.html">
-                        HOME
-                    </a>
-                </li>
-                <li>
-                    <a href="../templates/cursos.html">
-                        CURSOS
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.instagram.com/ti.udia/" target="_blank">
-                        BLOG
-                    </a>
-                </li>
-                <li style="float: right;">
-                    <a href="../templates/formulario de inscrição.html">
-                        AFILIADOS
-                    </a>
-                </li>
-            </ul>
+          <a id="logoPK" href="../index.html">
+            <img src="../static/logoPK.png" alt="">
+          </a>
+          <ul>
+            <li>
+              <a href="../templates/cursos.html">
+                CURSOS
+              </a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/ti.udia/" target="_blank">
+                BLOG
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                SOBRE
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                HALL DA FAMA
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                VALIDAR CERTIFIDADO
+              </a>
+            </li>
+            <li>
+              <a href="../templates/formulario de inscrição.html">
+                AFILIADOS
+              </a>
+            </li>
+          </ul>
         </nav>
-    </header>
+      </header>
     <ul id="cursos">
-        <label for="">
-            <li>IOT - INTERNET DAS COISAS</li>
-            <a href="IOT.html" target="_blank"><video src="../static/IOT - INTERNET DAS COISAS.mp4" loop muted autoplay></video></a>
-        </label>
-        <label for="">
-            <li>MARCAÇÕES HTML E CSS</li>
-            <a href="marcações.html" target="_blank"><video src="../static/MARCAÇÕES HTML E CSS.mp4" loop muted autoplay></video></a>
-        </label>
-        <label for="">
-            <li>PROGRAMANDO EM PYTHON</li>
-            <a href="python.html" target="_blank"><video src="../static/PROGRAMANDO EM PYTHON.mp4" loop muted autoplay></video></a>
-        </label>
-        <label for="">
-            <li>PROGRAMANDO EM JAVA SCRIPT</li>
-            <a href="javascript.html" target="_blank"><video src="../static/PROGRAMANDO EM JAVA SCRIPT.mp4" loop muted autoplay></video></a>
-        </label>
+        <li>
+            IOT - INTERNET DAS COISAS
+            <a href="IOT.html" target="_blank"><video src="../static/IOT - INTERNET DAS COISAS.mp4" loop muted
+                    autoplay></video>
+            </a>
+        </li>
+        <li>
+            MARCAÇÕES HTML E CSS
+            <a href="marcações.html" target="_blank"><video src="../static/MARCAÇÕES HTML E CSS.mp4" loop muted
+                    autoplay></video>
+            </a>
+        </li>
+        <li>
+            PROGRAMANDO EM PYTHON
+            <a href="python.html" target="_blank"><video src="../static/PROGRAMANDO EM PYTHON.mp4" loop muted
+                    autoplay></video>
+            </a>
+        </li>
+        <li>
+            PROGRAMANDO EM JAVA SCRIPT
+            <a href="javascript.html" target="_blank"><video src="../static/PROGRAMANDO EM JAVA SCRIPT.mp4" loop muted
+                    autoplay></video>
+            </a>
+        </li>
     </ul>
 </body>
 
