--- a/templates/IOT.html
+++ b/templates/IOT.html
@@ -22,30 +22,43 @@
         </a>
         <header>
             <nav>
-                <ul>
-                    <li>
-                        <a href="../index.html">
-                            <img src="../static/logoPK.png" style="max-width: 30%;" alt="">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="cursos.html">
-                            CURSOS
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.instagram.com/ti.udia/" target="_blank">
-                            BLOG
-                        </a>
-                    </li>
-                    <li style="float: right;">
-                        <a href="formulario de inscrição.html">
-                            AFILIADOS
-                        </a>
-                    </li>
-                </ul>
+              <a id="logoPK" href="../index.html">
+                <img src="../static/logoPK.png" alt="">
+              </a>
+              <ul>
+                <li>
+                  <a href="../templates/cursos.html">
+                    CURSOS
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.instagram.com/ti.udia/" target="_blank">
+                    BLOG
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    SOBRE
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    HALL DA FAMA
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    VALIDAR CERTIFIDADO
+                  </a>
+                </li>
+                <li>
+                  <a href="../templates/formulario de inscrição.html">
+                    AFILIADOS
+                  </a>
+                </li>
+              </ul>
             </nav>
-        </header>
+          </header>
     <section class="finalizar">
         <h1>IOT - INTERNET DAS COISAS</h1>
         <video src="../static/IOT - INTERNET DAS COISAS.mp4" loop muted autoplay></video>
