--- a/templates/formulario de inscrição.html
+++ b/templates/formulario de inscrição.html
@@ -24,14 +24,12 @@
     </picture>
     <header>
         <nav>
+            <a id="logoPK" href="../index.html">
+                <img src="../static/logoPK.png" alt="">
+            </a>
             <ul>
                 <li>
-                    <a href="../index.html">
-                        <img src="../static/logoPK.png" style="max-width: 30%;" alt="">
-                    </a>
-                </li>
-                <li>
-                    <a href="cursos.html">
+                    <a href="../templates/cursos.html">
                         CURSOS
                     </a>
                 </li>
@@ -40,15 +38,29 @@
                         BLOG
                     </a>
                 </li>
-                <li style="float: right;">
-                    <a href="formulario de inscrição.html">
+                <li>
+                    <a href="#">
+                        SOBRE
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        HALL DA FAMA
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        VALIDAR CERTIFIDADO
+                    </a>
+                </li>
+                <li>
+                    <a href="../templates/formulario de inscrição.html">
                         AFILIADOS
                     </a>
                 </li>
             </ul>
         </nav>
     </header>
-
     <div class="interface">
         <iframe id="iframe" width="100%" height="700px"
             src="https://docs.google.com/forms/d/e/1FAIpQLSc-KSjObS8_6Lmiyj0ZU4VF-nur8QSuPDyZ-iDBIJyQUvDwXg/viewform?embedded=true"
